--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial.tex
@@ -13,7 +13,7 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Total-Evidence Analysis of Fossil and Extant Taxa under the Fossilized Birth-Death Process}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Tracy A. Heath, April Wright, and Walker Pett}
+{\Large Tracy A. Heath, April M. Wright, and Walker Pett}
 \vspace{1cm}
 \end{center}
 
