--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1290,6 +1290,15 @@ Are the ages of the fossil tips the same as what was shown in Tracer?
 \label{fig:IcyTreeSumm}
 \end{figure}
 
+\begin{figure}[h!]
+\fbox{%
+\begin{minipage}{\textwidth}\centering
+\includegraphics[scale=0.5, angle=0]{\ResourcePath figures/branch_highlight.png}
+\caption{\small Screenshot of highlighting a branch in IcyTree showing child node attributes, including the clade posterior probability and the highest posterior density (HPD) age intervals.}
+\end{minipage}}
+\label{fig:IcyTreeScreenshort}
+\end{figure}
+
 
 %TODO IcyTree
 
