Update fig TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1284,19 +1284,19 @@ Are the ages of the fossil tips the same as what was shown in Tracer?
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
-\includegraphics[width=\textwidth,angle=0]{\ResourcePath figures/summary_tree.pdf}
-\caption{\small Maximum sampled ancestor clade credibility (MSACC) tree of bear species used in this tutorial. Numbers above fossil nodes indicate the posterior probability of being a sampled ancestor.}
+\includegraphics[scale=0.5, angle=0]{\ResourcePath figures/branch_highlight.png}
+\caption{\small Screenshot of highlighting a branch in IcyTree showing child node attributes, including the clade posterior probability and the 95\% highest posterior density (HPD) age intervals.}
 \end{minipage}}
-\label{fig:IcyTreeSumm}
+\label{fig:IcyTreeScreenshort}
 \end{figure}
 
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
-\includegraphics[scale=0.5, angle=0]{\ResourcePath figures/branch_highlight.png}
-\caption{\small Screenshot of highlighting a branch in IcyTree showing child node attributes, including the clade posterior probability and the highest posterior density (HPD) age intervals.}
+\includegraphics[width=\textwidth,angle=0]{\ResourcePath figures/summary_tree.pdf}
+\caption{\small Maximum sampled ancestor clade credibility (MSACC) tree of bear species used in this tutorial. Numbers above fossil nodes indicate the posterior probability of being a sampled ancestor.}
 \end{minipage}}
-\label{fig:IcyTreeScreenshort}
+\label{fig:IcyTreeSumm}
 \end{figure}
 
 
