--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1149,7 +1149,7 @@ Are there any parameters that have really low ESS? Why do you think that might b
 Next, we can click over to the Trace window.
 This window shows us the samples for a given parameter at each iteration of the MCMC.
 The left side of the chain has a shaded portion that has been excluded as ``burn-in''.
-Samples taken near the beginning of chain are often discarded or ``burned'' because the MCMC may not immediately begin sampling from the target posterior distribution, particularly if the starting condition of the chain is far from the region of highest likelihood.
+Samples taken near the beginning of chain are often discarded or ``burned'' because the MCMC may not immediately begin sampling from the target posterior distribution, particularly if the starting condition of the chain is far from the region of highest posterior density.
 
 \begin{figure}[h!]
 \fbox{%
@@ -1285,7 +1285,7 @@ Are the ages of the fossil tips the same as what was shown in Tracer?
 \fbox{%
 \begin{minipage}{\textwidth}\centering
 \includegraphics[scale=0.5, angle=0]{\ResourcePath figures/branch_highlight.png}
-\caption{\small Screenshot of highlighting a branch in IcyTree showing child node attributes, including the clade posterior probability and the 95\% highest posterior density (HPD) age intervals.}
+\caption{\small Screenshot of highlighting a branch in IcyTree showing child node attributes, including the clade posterior probability and the 95\% highest posterior density (HPD) age interval.}
 \end{minipage}}
 \label{fig:IcyTreeScreenshort}
 \end{figure}
